# pichidflash

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.win  README.txt  autogen.sh  config.h.in  configure  configure.ac  hex.c  main.c  mphidflash.h  mphidflash.kdev4  port.c  usb-libusb.c  usb-linux.c  usb-osx.c  usb-windows.c
.kdev4/: mphidflash.kdev4
